--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
     }
 }
 
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
@@ -37,4 +38,9 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile 'me.zhanghai.android.materialprogressbar:library:1.4.2'
+    compile 'me.anwarshahriar:calligrapher:1.0'
+    compile 'com.sdsmdg.tastytoast:tastytoast:0.1.1'
+    compile 'com.github.andyxialm:ColorDialog:1.0.0'
+
+
 }
