решил проблемы с добавлением фото, остался дизайн

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.azia.diplom">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/ThemeApp1">
+
         <activity
             android:name=".mainMenu.MainActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/ThemeApp1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,7 +48,7 @@
             android:name=".notes.NoteActivity"
             android:label="@string/title_activity_note"
             android:theme="@style/ThemeApp1" />
-        <activity android:name=".notes.AddNoteActivity"></activity>
+        <activity android:name=".notes.AddNoteActivity" />
     </application>
 
 </manifest>
