сделал основной дизайн осталось добавить его в остальные страницы проблема с кнопкой назад

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity
             android:name=".mainMenu.MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/ThemeApp1">
+            android:theme="@style/BlackTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +25,7 @@
         <activity
             android:name=".schedule.ScheduleActivity"
             android:label="@string/title_activity_main2"
-            android:theme="@style/ThemeApp2">
+            android:theme="@style/BlackTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".mainMenu.MainActivity" />
@@ -33,7 +33,7 @@
         <activity
             android:name=".timer.TimerActivity"
             android:label="@string/title_activity_timer"
-            android:theme="@style/ThemeApp3">
+            android:theme="@style/BlackTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".mainMenu.MainActivity" />
@@ -41,7 +41,7 @@
         <activity
             android:name=".object.ObjectActivity"
             android:label="@string/title_activity_object"
-            android:theme="@style/ThemeApp3">
+            android:theme="@style/BlackTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".mainMenu.MainActivity" />
@@ -49,7 +49,7 @@
         <activity
             android:name=".homeWork.HomeWorkActivity"
             android:label="@string/title_activity_home_work"
-            android:theme="@style/ThemeApp3">
+            android:theme="@style/BlackTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".mainMenu.MainActivity" />
@@ -57,19 +57,37 @@
         <activity
             android:name=".notes.NoteActivity"
             android:label="@string/title_activity_note"
-            android:theme="@style/ThemeApp1">
+            android:theme="@style/BlackTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".mainMenu.MainActivity" />
         </activity>
 
-        <activity android:name=".homeWork.AddHomeWorkActivity" />
-        <activity android:name=".notes.AddNoteActivity" />
-        <activity android:name=".object.AddObjectActivity" />
+        <activity
+            android:name=".homeWork.AddHomeWorkActivity"
+            android:theme="@style/BlackTheme">
+
+        </activity>
+        <activity
+            android:name=".notes.AddNoteActivity"
+            android:theme="@style/BlackTheme">
+
+        </activity>
+        <activity
+            android:name=".object.AddObjectActivity"
+            android:theme="@style/BlackTheme">
+
+
+        </activity>
         <activity
             android:name=".schedule.AddScheduleActivity"
             android:label="@string/title_activity_add_schedule"
-            android:theme="@style/ThemeApp3" />
+            android:theme="@style/BlackTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".schedule.ScheduleActivity" />
+
+        </activity>
     </application>
 
 </manifest>
